--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Everything Presence Lite
 description: Documentation for the Everything Presence Lite!
 theme: just-the-docs
 url: https://everythingsmarthome.github.io
-baseurl: ""
+#baseurl: ""
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
