--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -50,6 +50,13 @@ jobs:
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v2
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./static
+          enable_jekyll: true
+          keep_files: true
 
   # Deployment job
   deploy:
