--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,9 +11,9 @@ jobs:
     name: Publish Everything Presence Lite
     uses: esphome/workflows/.github/workflows/publish.yml@main
     with:
-      files: everything-presence-lite.yaml
-      name: Everything Presence Lite
-      manifest_filename: everything-presence-lite-manifest.json
+      files: everything-presence-lite-ha.yaml
+      name: Everything Presence Lite HA
+      manifest_filename: everything-presence-lite-ha-manifest.json
       clean: false
       esphome_version: latest
 #  publish-everything-presence-one-smartthings:
