--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -70,4 +70,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: ./static
+          folder: ./public
