--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -61,6 +61,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: "List directory"
+        run: "ls -lah"
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
