--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -39,12 +39,12 @@ jobs:
           ruby-version: '3.2' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v3
+ #     - name: Setup Pages
+ #       id: pages
+ #       uses: actions/configure-pages@v3
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        run: bundle exec jekyll build"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
@@ -67,6 +67,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .
+          publish_dir: ./_site
           enable_jekyll: true
           keep_files: true
