--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -45,6 +45,8 @@ jobs:
  #     - name: Setup Pages
  #       id: pages
  #       uses: actions/configure-pages@v3
+      - name: Change Directory
+        run: "cd static"
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         run: bundle exec jekyll build
