--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -49,7 +49,7 @@ jobs:
         run: "cd static"
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        run: bundle exec jekyll build
+        run: cd static && bundle exec jekyll build
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
