--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -56,13 +56,13 @@ jobs:
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v2
         with:
-          path: static/
+          path: static/_site/
       - name: "List directory"
-        run: "ls -lah"
+        run: "ls -lah static/"
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./static
+          publish_dir: ./static/_site/
           enable_jekyll: true
           keep_files: true
