--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: Everything Presence Lite
 description: Documentation for the Everything Presence Lite!
 #theme: just-the-docs
 url: https://everythingsmarthome.github.io
-remote_theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
+repository: just-the-docs/just-the-docs # for github-metadata
 #baseurl: ""
 
 aux_links:
