--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 title: Everything Presence Lite
 description: Documentation for the Everything Presence Lite!
 #theme: just-the-docs
-url: https://everythingsmarthome.github.io
+url: https://everythingsmarthome.github.io/everything-presence-lite
 remote_theme: just-the-docs/just-the-docs
 repository: just-the-docs/just-the-docs # for github-metadata
-baseurl: "/everything-presence-lite"
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
