--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Everything Presence Lite
 description: Documentation for the Everything Presence Lite!
-url: https://everythingsmarthome.github.io/everything-presence-lite
+url: https://everythingsmarthome.github.io
 remote_theme: just-the-docs/just-the-docs
+baseurl: "/everything-presence-lite"
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
