--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -57,7 +57,7 @@ jobs:
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v2
         with:
-          path: /static/_site
+          path: /static
       - name: "List directory"
         run: "ls -lah static/"
       - name: Deploy
