--- a/everything-presence-lite-ha.yaml
+++ b/everything-presence-lite-ha.yaml
@@ -30,7 +30,7 @@ wifi:
   ap: {}
 
 dashboard_import:
-  package_import_url: github://EverythingSmartHome/everything-presence-lite/everything-presence-lite-ha.yaml
+  package_import_url: github://EverythingSmartHome/everything-presence-lite/everything-presence-lite-ha.yaml@main
   import_full_config: false # or true
 
 improv_serial:
