--- a/everything-presence-lite-ha.yaml
+++ b/everything-presence-lite-ha.yaml
@@ -480,204 +480,10 @@ uart:
     after:
      delimiter: [0X55, 0XCC]
     sequence:
-      # - lambda: UARTDebug::log_hex(direction, bytes, ' ');
-      - lambda: |-
-          if ((millis() - id(mmwave_update_time)) <= 1000) { 
-            return;
-          };
-          id(mmwave_update_time) = millis();
+      - lambda: UARTDebug::log_hex(direction, bytes, ' ');
 
-          int16_t p1_x = (uint16_t((bytes[5] << 8) | bytes[4] ));
-          if ((bytes[5] & 0x80) >> 7){
-            p1_x -= pow(2, 15); 
-          }else{
-            p1_x = 0 - p1_x; // was 0 - p1_x;
-          }
-          p1_x = -p1_x;
 
-          int16_t p1_y = (uint16_t((bytes[7] << 8) | bytes[6] ));
-          if ((bytes[7] & 0x80) >> 7){
-            p1_y -= pow(2, 15);
-          }else{
-            p1_y = 0 - p1_y;
-          }
 
-          float p1_speed = (bytes[9] << 8 | bytes[8] );
-          if ((bytes[9] & 0x80) >> 7){
-            p1_speed -= pow(2, 15);
-          }else{
-            p1_speed = 0 - p1_speed;
-          }
-          int16_t p1_distance_resolution = (uint16_t((bytes[11] << 8) | bytes[10] )); 
-
-          int16_t p2_x = (uint16_t((bytes[13] << 8) | bytes[12] ));
-          if ((bytes[13] & 0x80) >> 7){
-            p2_x -=  pow(2, 15); 
-          }else{
-            p2_x = 0 - p2_x;
-          }
-
-          int16_t p2_y = (uint16_t((bytes[15] << 8) | bytes[14] ));
-          if ((bytes[15] & 0x80) >> 7){
-            p2_y -= pow(2, 15);
-          }else{
-            p2_y = 0 - p2_y;
-          }
-
-          float p2_speed = (bytes[17] << 8 | bytes[16] );
-          if ((bytes[17] & 0x80) >> 7){
-            p2_speed -= pow(2, 15);
-          }else{
-            p2_speed = 0 - p2_speed;
-          }
-          int16_t p2_distance_resolution = (uint16_t((bytes[19] << 8) | bytes[18] )); 
-
-          int16_t p3_x = (uint16_t((bytes[21] << 8) | bytes[20] ));
-          if ((bytes[21] & 0x80) >> 7){
-            p3_x -=  pow(2, 15); 
-          }else{
-            p3_x = 0 - p3_x;
-          }
-
-          int16_t p3_y = (uint16_t((bytes[23] << 8) | bytes[22] ));
-          if ((bytes[23] & 0x80) >> 7){
-            p3_y -= pow(2, 15);
-          }else{
-            p3_y = 0 - p3_y;
-          }
-
-          float p3_speed = (bytes[25] << 8 | bytes[24] );
-          if ((bytes[25] & 0x80) >> 7){
-            p3_speed -= pow(2, 15);
-          }else{
-            p3_speed = 0 - p3_speed;
-          }
-          int16_t p3_distance_resolution = (uint16_t((bytes[27] << 8) | bytes[26] ));
-
-          const float RADIANS_TO_DEGREES = 180.0 / 3.14159265358979323846;
-          float p1_angle = atan2(p1_y, p1_x) * RADIANS_TO_DEGREES;
-          float p2_angle = atan2(p2_y, p2_x) * RADIANS_TO_DEGREES;
-          float p3_angle = atan2(p3_y, p3_x) * RADIANS_TO_DEGREES;
-          
-          float p1_distance = sqrt(p1_x * p1_x + p1_y * p1_y);
-          float p2_distance = sqrt(p2_x * p2_x + p2_y * p2_y);
-          float p3_distance = sqrt(p3_x * p3_x + p3_y * p3_y);
-          
-
-          float max_distance = float(id(distance).state) * 10;
-          if (p1_distance < max_distance) {
-            id(target1_x).publish_state(p1_x * -1);
-            id(target1_y).publish_state(p1_y);
-            id(target1_speed).publish_state(p1_speed / 100);
-            id(target1_resolution).publish_state(p1_distance_resolution);
-            id(target1_distance).publish_state(p1_distance);
-            id(target1_angle).publish_state(p1_angle - 90);
-          } else {
-            id(target1_x).publish_state(0);
-            id(target1_y).publish_state(0);
-            id(target1_speed).publish_state(0);
-            id(target1_resolution).publish_state(0);
-            id(target1_distance).publish_state(0);
-            id(target1_angle).publish_state(0);
-          }
-
-          if (p2_distance < max_distance) {
-            id(target2_x).publish_state(p2_x);
-            id(target2_y).publish_state(p2_y);
-            id(target2_speed).publish_state(p2_speed / 100);
-            id(target2_resolution).publish_state(p2_distance_resolution);
-            id(target2_distance).publish_state(p2_distance);
-            id(target2_angle).publish_state(p2_angle);
-          } else {
-            id(target2_x).publish_state(0);
-            id(target2_y).publish_state(0);
-            id(target2_speed).publish_state(0);
-            id(target2_resolution).publish_state(0);
-            id(target2_distance).publish_state(0);
-            id(target2_angle).publish_state(0);
-          }
-
-          if (p3_distance < max_distance) {
-            id(target3_x).publish_state(p3_x);
-            id(target3_y).publish_state(p3_y);
-            id(target3_speed).publish_state(p3_speed / 100);
-            id(target3_resolution).publish_state(p3_distance_resolution);
-            id(target3_distance).publish_state(p3_distance);
-            id(target3_angle).publish_state(p3_angle);
-          } else {
-            id(target3_x).publish_state(0);
-            id(target3_y).publish_state(0);
-            id(target3_speed).publish_state(0);
-            id(target3_resolution).publish_state(0);
-            id(target3_distance).publish_state(0);
-            id(target3_angle).publish_state(0);
-          }
-
-          bool zone_one_active = (
-            (id(target1_active).state == true &&
-            (id(target1_x).state >= id(zone1_begin_x).state && id(target1_x).state <= id(zone1_end_x).state) &&
-            (id(target1_y).state >= id(zone1_begin_y).state && id(target1_y).state <= id(zone1_end_y).state)
-               ) ||
-            (id(target2_active).state == true  &&
-            (id(target2_x).state >= id(zone1_begin_x).state && id(target2_x).state <= id(zone1_end_x).state) &&
-            (id(target2_y).state >= id(zone1_begin_y).state && id(target2_y).state <= id(zone1_end_y).state)
-            )||
-            (id(target3_active).state == true  &&
-            (id(target3_x).state >= id(zone1_begin_x).state && id(target3_x).state <= id(zone1_end_x).state) &&
-            (id(target3_y).state >= id(zone1_begin_y).state && id(target3_y).state <= id(zone1_end_y).state)
-            )
-          );
-          id(zone1_occupancy).publish_state(zone_one_active);
-
-          bool zone_two_active = (
-            (id(target1_active).state == true &&
-            (id(target1_x).state >= id(zone2_begin_x).state && id(target1_x).state <= id(zone2_end_x).state) &&
-            (id(target1_y).state >= id(zone2_begin_y).state && id(target1_y).state <= id(zone2_end_y).state)
-               ) ||
-            (id(target2_active).state == true  &&
-            (id(target2_x).state >= id(zone2_begin_x).state && id(target2_x).state <= id(zone2_end_x).state) &&
-            (id(target2_y).state >= id(zone2_begin_y).state && id(target2_y).state <= id(zone2_end_y).state)
-            )||
-            (id(target3_active).state == true  &&
-            (id(target3_x).state >= id(zone2_begin_x).state && id(target3_x).state <= id(zone2_end_x).state) &&
-            (id(target3_y).state >= id(zone2_begin_y).state && id(target3_y).state <= id(zone2_end_y).state)
-            )
-          );
-          id(zone2_occupancy).publish_state(zone_two_active);
-
-          bool zone_three_active = (
-            (id(target1_active).state == true &&
-            (id(target1_x).state >= id(zone3_begin_x).state && id(target1_x).state <= id(zone3_end_x).state) &&
-            (id(target1_y).state >= id(zone3_begin_y).state && id(target1_y).state <= id(zone3_end_y).state)
-               ) ||
-            (id(target2_active).state == true  &&
-            (id(target2_x).state >= id(zone3_begin_x).state && id(target2_x).state <= id(zone3_end_x).state) &&
-            (id(target2_y).state >= id(zone3_begin_y).state && id(target2_y).state <= id(zone3_end_y).state)
-            )||
-            (id(target3_active).state == true  &&
-            (id(target3_x).state >= id(zone3_begin_x).state && id(target3_x).state <= id(zone3_end_x).state) &&
-            (id(target3_y).state >= id(zone3_begin_y).state && id(target3_y).state <= id(zone3_end_y).state)
-            )
-          );
-          id(zone3_occupancy).publish_state(zone_three_active);
-
-          bool zone_four_active = (
-            (id(target1_active).state == true &&
-            (id(target1_x).state >= id(zone4_begin_x).state && id(target1_x).state <= id(zone4_end_x).state) &&
-            (id(target1_y).state >= id(zone4_begin_y).state && id(target1_y).state <= id(zone4_end_y).state)
-               ) ||
-            (id(target2_active).state == true  &&
-            (id(target2_x).state >= id(zone4_begin_x).state && id(target2_x).state <= id(zone4_end_x).state) &&
-            (id(target2_y).state >= id(zone4_begin_y).state && id(target2_y).state <= id(zone4_end_y).state)
-            )||
-            (id(target3_active).state == true  &&
-            (id(target3_x).state >= id(zone4_begin_x).state && id(target3_x).state <= id(zone4_end_x).state) &&
-            (id(target3_y).state >= id(zone4_begin_y).state && id(target3_y).state <= id(zone4_end_y).state)
-            )
-          );
-          id(zone4_occupancy).publish_state(zone_four_active);
-
-          
 
 button:
   - platform: restart
