--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Everything Presence Lite
 description: Documentation for the Everything Presence Lite!
 url: https://everythingsmarthome.github.io
-theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
 baseurl: "/everything-presence-lite"
 
 aux_links:
