--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Everything Presence Lite
 description: Documentation for the Everything Presence Lite!
 url: https://everythingsmarthome.github.io
 remote_theme: just-the-docs/just-the-docs@v0.7.0
-baseurl: "/everything-presence-lite"
+baseurl: ""
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
