--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - gh-pages  # Set this to the branch containing your site source
 
+  workflow_dispatch:
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
