--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -7,6 +7,11 @@ on:
 
   workflow_dispatch:
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
